--- a/pkg/apis/settings/validation/BUILD
+++ b/pkg/apis/settings/validation/BUILD
@@ -15,6 +15,7 @@ go_test(
         "//pkg/apis/core:go_default_library",
         "//pkg/apis/settings:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
+        "//vendor/k8s.io/apiserver/pkg/util/feature:go_default_library",
     ],
 )
 
@@ -27,6 +28,7 @@ go_library(
         "//pkg/apis/settings:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1/validation:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/util/validation/field:go_default_library",
+        "//vendor/k8s.io/apiserver/pkg/util/feature:go_default_library",
     ],
 )
 
