--- a/pkg/kubelet/kubeletconfig/util/files/BUILD
+++ b/pkg/kubelet/kubeletconfig/util/files/BUILD
@@ -3,6 +3,7 @@ package(default_visibility = ["//visibility:public"])
 load(
     "@io_bazel_rules_go//go:def.bzl",
     "go_library",
+    "go_test",
 )
 
 go_library(
@@ -23,4 +24,12 @@ filegroup(
     name = "all-srcs",
     srcs = [":package-srcs"],
     tags = ["automanaged"],
+)
+
+go_test(
+    name = "go_default_test",
+    srcs = ["files_test.go"],
+    importpath = "k8s.io/kubernetes/pkg/kubelet/kubeletconfig/util/files",
+    library = ":go_default_library",
+    deps = ["//pkg/util/filesystem:go_default_library"],
 )
