--- a/cluster/addons/registry/registry-pv.yaml.in
+++ b/cluster/addons/registry/registry-pv.yaml.in
@@ -1,10 +1,7 @@
-kind: PersistentVolume
 apiVersion: v1
+kind: PersistentVolume
 metadata:
-  name: kube-system-kube-registry-pv
-  labels:
-    kubernetes.io/cluster-service: "true"
-    addonmanager.kubernetes.io/mode: Reconcile
+  name: kube-registry
 spec:
 {% if pillar.get('cluster_registry_disk_type', '') == 'gce' %}
   capacity:
@@ -14,4 +11,14 @@ spec:
   gcePersistentDisk:
     pdName: "{{ pillar['cluster_registry_disk_name'] }}"
     fsType: "ext4"
+{% endif %}
+{% if pillar.get('cluster_registry_disk_type', '') == 'nfs' %}
+  capacity:
+    storage: {{ pillar['cluster_registry_disk_size'] }}
+  accessModes:
+    - ReadWriteOnce
+  persistentVolumeReclaimPolicy: Recycle
+  nfs:
+    path: "{{ pillar['cluster_registry_path'] }}"
+    server: "{{ pillar['cluster_registry_disk_ip'] }}"
 {% endif %}
