--- a/cluster/addons/registry/registry-pvc.yaml.in
+++ b/cluster/addons/registry/registry-pvc.yaml.in
@@ -1,11 +1,7 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: kube-registry-pvc
-  namespace: kube-system
-  labels:
-    kubernetes.io/cluster-service: "true"
-    addonmanager.kubernetes.io/mode: Reconcile
+  name: kube-registry
 spec:
   accessModes:
     - ReadWriteOnce
