--- a/cluster/addons/registry/registry-svc.yaml
+++ b/cluster/addons/registry/registry-svc.yaml
@@ -1,17 +1,12 @@
-apiVersion: v1
 kind: Service
+apiVersion: v1
 metadata:
-  name: kube-registry
-  namespace: kube-system
-  labels:
-    k8s-app: kube-registry-upstream
-    kubernetes.io/cluster-service: "true"
-    addonmanager.kubernetes.io/mode: Reconcile
-    kubernetes.io/name: "KubeRegistry"
+  name: registry
 spec:
   selector:
-    k8s-app: kube-registry-upstream
+    app: registry
   ports:
-  - name: registry
-    port: 5000
-    protocol: TCP
+    - protocol: TCP
+      port: 5000
+      name: registry
+  type: LoadBalancer
