--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -20,6 +20,12 @@
 #  name = "github.com/x/y"
 #  version = "2.4.0"
 
+required = [
+    "github.com/onsi/ginkgo/ginkgo",
+    "github.com/jteeuwen/go-bindata/go-bindata",
+    "github.com/tools/godep",
+]
+
 [prune]
   non-go = true
   go-tests = true
@@ -481,3 +487,7 @@
 [[constraint]]
   branch = "master"
   name = "github.com/euforia/go-git-server"
+
+[[constraint]]
+  name = "github.com/jteeuwen/go-bindata"
+  revision = "a0ff2567cfb70903282db057e799fd826784d41d"
