--- a/staging/src/k8s.io/apimachinery/pkg/util/runtime/BUILD
+++ b/staging/src/k8s.io/apimachinery/pkg/util/runtime/BUILD
@@ -10,13 +10,23 @@ go_test(
     name = "go_default_test",
     srcs = ["runtime_test.go"],
     embed = [":go_default_library"],
+    deps = [
+        "//vendor/github.com/agext/levenshtein:go_default_library",
+        "//vendor/github.com/golang/groupcache/lru:go_default_library",
+        "//vendor/k8s.io/apimachinery/pkg/util/clock:go_default_library",
+    ],
 )
 
 go_library(
     name = "go_default_library",
     srcs = ["runtime.go"],
     importpath = "k8s.io/apimachinery/pkg/util/runtime",
-    deps = ["//vendor/github.com/golang/glog:go_default_library"],
+    deps = [
+        "//vendor/github.com/agext/levenshtein:go_default_library",
+        "//vendor/github.com/golang/glog:go_default_library",
+        "//vendor/github.com/golang/groupcache/lru:go_default_library",
+        "//vendor/k8s.io/apimachinery/pkg/util/clock:go_default_library",
+    ],
 )
 
 filegroup(
