--- a/test/integration/apps/upgrades/BUILD
+++ b/test/integration/apps/upgrades/BUILD
@@ -10,6 +10,7 @@ go_library(
         "//test/integration/fixtures/controlplane:go_default_library",
         "//vendor/k8s.io/api/core/v1:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
+        "//vendor/k8s.io/apimachinery/pkg/util/wait:go_default_library",
     ],
 )
 
