Added IsCritical helper.
Signed-off-by: Da K. Ma <madaxa@cn.ibm.com>

--- a/pkg/kubelet/pod/BUILD
+++ b/pkg/kubelet/pod/BUILD
@@ -14,6 +14,7 @@ go_library(
     ],
     importpath = "k8s.io/kubernetes/pkg/kubelet/pod",
     deps = [
+        "//pkg/features:go_default_library",
         "//pkg/kubelet/checkpoint:go_default_library",
         "//pkg/kubelet/configmap:go_default_library",
         "//pkg/kubelet/container:go_default_library",
@@ -24,6 +25,7 @@ go_library(
         "//vendor/k8s.io/apimachinery/pkg/api/errors:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/types:go_default_library",
+        "//vendor/k8s.io/apiserver/pkg/util/feature:go_default_library",
         "//vendor/k8s.io/client-go/kubernetes:go_default_library",
     ],
 )
